--- a/deployments/kustomize/overlays/openshift/images/image-builds/mariadb-build.yaml
+++ b/deployments/kustomize/overlays/openshift/images/image-builds/mariadb-build.yaml
@@ -32,4 +32,4 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: wordpress-mariadb-run:dev
+      name: wordpress-mariadb-run:latest
