--- a/deployments/kustomize/overlays/openshift/images/image-builds/wordpress-build.yaml
+++ b/deployments/kustomize/overlays/openshift/images/image-builds/wordpress-build.yaml
@@ -33,7 +33,7 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: wordpress-wordpress-run:dev
+      name: wordpress-wordpress-run:latest
   resources:
     limits:
       cpu: 1
