--- a/deployments/kustomize/overlays/openshift/kustomization.yaml
+++ b/deployments/kustomize/overlays/openshift/kustomization.yaml
@@ -16,5 +16,7 @@ configMapGenerator:
   - WORDPRESS_DB_HOST=wordpress-mariadb
   - MYSQL_USER=dev_user
   - APP_DOMAIN=example.gov.bc.ca
+  files:
+  - nginx.conf
 patchesStrategicMerge:
 - patch.yaml
