update image build reference

--- a/deployments/kustomize/overlays/openshift/images/image-builds/nginx-build.yaml
+++ b/deployments/kustomize/overlays/openshift/images/image-builds/nginx-build.yaml
@@ -22,7 +22,7 @@ spec:
     type: Git
     git:
       ref: main
-      uri: https://github.com/bcgov/wordpress.git
+      uri: https://github.com/bcgov/wordpress-deploy-digimod.git
     contextDir: openshift/templates/images/nginx/docker
   strategy:
     type: Docker
