--- a/deployments/kustomize/overlays/openshift/images/image-builds/wordpress-build.yaml
+++ b/deployments/kustomize/overlays/openshift/images/image-builds/wordpress-build.yaml
@@ -26,7 +26,7 @@ spec:
     type: Git
     git:
       ref: main
-      uri: https://github.com/bcgov/wordpress.git
+      uri: https://github.com/bcgov/wordpress-deploy-digimod.git
     contextDir: openshift/templates/images/wordpress/docker
   strategy:
     type: Docker
