--- a/deployments/kustomize/overlays/openshift/images/image-builds/mariadb-build.yaml
+++ b/deployments/kustomize/overlays/openshift/images/image-builds/mariadb-build.yaml
@@ -25,7 +25,7 @@ spec:
     type: Git
     git:
       ref: main
-      uri: https://github.com/bcgov/wordpress.git
+      uri: https://github.com/bcgov/wordpress-deploy-digimod.git
     contextDir: openshift/templates/images/mariadb/docker
   strategy:
     type: Docker
