--- a/.github/workflows/wordpress_cron.yaml
+++ b/.github/workflows/wordpress_cron.yaml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
           # Define the Github API URL for the Dockerfile
-          DOCKERFILE_PATH='./openshift/templates/images/wordpress/docker/Dockerfile'
+          DOCKERFILE_PATH='../../openshift/templates/images/wordpress/docker/Dockerfile'
 
           # Extract the current WordPress version from Dockerfile
           current_version=$(head -n 1 DOCKERFILE_PATH | awk '{print $2}' | cut -d ':' -f 2- | cut -d '-' -f 2-)
