--- a/.github/workflows/wordpress_cron.yaml
+++ b/.github/workflows/wordpress_cron.yaml
@@ -17,6 +17,8 @@ jobs:
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
           # Define the Github API URL for the Dockerfile
+          pwd
+          ls ../../openshift/templates/images/wordpress/docker
           DOCKERFILE_PATH='../../openshift/templates/images/wordpress/docker/Dockerfile'
 
           # Extract the current WordPress version from Dockerfile
