--- a/.github/workflows/wordpress_cron.yaml
+++ b/.github/workflows/wordpress_cron.yaml
@@ -26,7 +26,7 @@ jobs:
           latest_version=$(curl https://hub.docker.com/v2/repositories/library/wordpress/tags | jq -r '.results[0].name')
           
           # Avoid using latest tag. Get the next one.
-          if [[ ""$latest_version" != "latest" ]]; then
+          if [[ "$latest_version" != "latest" ]]; then
             latest_version=$(curl https://hub.docker.com/v2/repositories/library/wordpress/tags | jq -r '.results[1].name')
           fi
 
