--- a/deployments/kustomize/overlays/digital-prod/patch.yaml
+++ b/deployments/kustomize/overlays/digital-prod/patch.yaml
@@ -1,4 +1,4 @@
-# digital-dev/patch.yaml
+# digital-prod/patch.yaml
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
@@ -7,10 +7,10 @@ metadata:
      haproxy.router.openshift.io/ip_whitelist: >-
       # Add all IP's to whitelist, to only allow certain IP ranges.
 spec:
-  host: digital-wp.apps.silver.devops.gov.bc.ca
+  host: digitalgov.bc.ca
   to:
     kind: Service
-    name: digital-prod-wordpress-nginx
+    name: digital-wordpress-nginx
     weight: 100 
 ---
 apiVersion: apps/v1
@@ -30,14 +30,14 @@ spec:
       - name: php-fpm-secrets-volume
         secret:
           defaultMode: 420
-          secretName: digital-prod-wordpress-secrets
+          secretName: digital-wordpress-secrets
       - name: mariadb-secrets-volume
         secret:
           defaultMode: 420
           items:
           - key: MYSQL_PASSWORD
             path: MYSQL_PASSWORD
-          secretName: digital-prod-wordpress-secrets
+          secretName: digital-wordpress-secrets
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -60,6 +60,6 @@ spec:
             path: mysql_password
           - key: MYSQL_ROOT_PASSWORD
             path: mysql_root_password
-          secretName: digital-prod-wordpress-secrets
+          secretName: digital-wordpress-secrets
 
 
