--- a/.github/workflows/nginx-build.yaml
+++ b/.github/workflows/nginx-build.yaml
@@ -1,5 +1,9 @@
 name: Build Nginx Image.
 on:
+  workflow_run:
+    workflows: ["Check for new WordPress Docker image"]
+    types: 
+      - completed
   push:
     branches:
       - main
@@ -11,6 +15,7 @@ defaults:
     working-directory: ./
 jobs:
   oc:
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
     uses: bcgov/wordpress/.github/workflows/oc-build-image.yaml@main
     with:
       image: wordpress-nginx-run
