--- a/openshift/templates/images/nginx/docker/Dockerfile
+++ b/openshift/templates/images/nginx/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:1.23.1-alpine
+FROM nginx:stable-alpine
 
 RUN set -x \
     && sed -i -e 's/^\(nginx:[^:]\):[0-9]*:[0-9]*:/\1:1001:0:/' /etc/passwd \
