--- a/.github/workflows/wordpress-update.yaml
+++ b/.github/workflows/wordpress-update.yaml
@@ -24,7 +24,8 @@ jobs:
           DOCKERFILE_PATH='./openshift/templates/images/wordpress/docker/Dockerfile'
           
           # Extract the current WordPress version from Dockerfile
-          CURRENT_TAG=$(head -n 1 $DOCKERFILE_PATH | awk '{print $2}' | cut -d ':' -f 2- | cut -d '-' -f 2-)
+          # CURRENT_TAG=$(head -n 1 $DOCKERFILE_PATH | awk '{print $2}' | cut -d ':' -f 2- | cut -d '-' -f 2-)
+          CURRENT_TAG=$(grep -m1 'FROM wordpress:' $DOCKERFILE_PATH | cut -d ':' -f 2)
           # Compare versions and update Dockerfile if needed
           if [[ "$CURRENT_TAG" != "$DOCKER_TAG" ]]; then
 
