Disabled deploying sidecar as requested in DG-104 https://bcdevex.atlassian.net/browse/DG-104

--- a/deployments/kustomize/overlays/digital-prod/kustomization.yaml
+++ b/deployments/kustomize/overlays/digital-prod/kustomization.yaml
@@ -22,9 +22,9 @@ images:
   - name: wordpress-nginx-run
     newName: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/wordpress-nginx-run
     newTag: prod
-  - name: wordpress-sidecar-run
-    newName: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/wordpress-sidecar-run
-    newTag: prod
+#  - name: wordpress-sidecar-run
+#    newName: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/wordpress-sidecar-run
+#    newTag: prod
 configMapGenerator:
 - name: wordpress-config
   behavior: merge
