--- a/deployments/kustomize/overlays/digital-test/kustomization.yaml
+++ b/deployments/kustomize/overlays/digital-test/kustomization.yaml
@@ -22,9 +22,9 @@ images:
   - name: wordpress-nginx-run
     newName: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/wordpress-nginx-run
     newTag: test
-  - name: wordpress-sidecar-run
-    newName: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/wordpress-sidecar-run
-    newTag: test
+#  - name: wordpress-sidecar-run
+#    newName: image-registry.openshift-image-registry.svc:5000/c0cce6-tools/wordpress-sidecar-run
+#    newTag: test
 configMapGenerator:
 - name: wordpress-config
   behavior: merge
