Disable the /digital-trust url proxy

--- a/deployments/kustomize/overlays/openshift/nginx.conf
+++ b/deployments/kustomize/overlays/openshift/nginx.conf
@@ -28,33 +28,36 @@
         }
         port_in_redirect off;
 
-        location /digital-trust/showcase/ {
-          proxy_pass https://bc-wallet-demo.apps.silver.devops.gov.bc.ca;
-        }
+        #NG Turned off Mar 21, 2024
+        #location /digital-trust/showcase/ {
+        #  proxy_pass https://bc-wallet-demo.apps.silver.devops.gov.bc.ca;
+        #}
 
         # location /digital-trust/ {
         #   rewrite ^/digital-trust/(.*)$ https://bcdigitaltrust.info/$1;
         # }
 
-        location ^~ /digital-trust {         
-          proxy_set_header Host $proxy_host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_buffering off;
-          rewrite ^/digital-trust/(.*)$ /$1 break;
-          proxy_pass https://bcdigitaltrust.info;
-        }
+        #NG Turned off Mar 21, 2024
+        #location ^~ /digital-trust {         
+        #  proxy_set_header Host $proxy_host;
+        #  proxy_set_header X-Real-IP $remote_addr;
+        #  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #  proxy_set_header X-Forwarded-Proto $scheme;
+        #  proxy_buffering off;
+        #  rewrite ^/digital-trust/(.*)$ /$1 break;
+        #  proxy_pass https://bcdigitaltrust.info;
+        #}
 
-        location ^~ /digital-trust-temp {         
-          proxy_set_header Host $proxy_host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_buffering off;
-          # rewrite ^/digital-trust/(.*)$ /$1 break;
-          proxy_pass https://bcdigitaltrust.info;
-        }
+        #NG Turned off Mar 21, 2024
+        #location ^~ /digital-trust-temp {         
+        #  proxy_set_header Host $proxy_host;
+        #  proxy_set_header X-Real-IP $remote_addr;
+        #  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #  proxy_set_header X-Forwarded-Proto $scheme;
+        #  proxy_buffering off;
+        #  # rewrite ^/digital-trust/(.*)$ /$1 break;
+        #  proxy_pass https://bcdigitaltrust.info;
+        #}
 
 
         # location ~ /digital-trust/(.*)$ {
