Re-enable the digital-trust/showcase proxy

--- a/deployments/kustomize/overlays/openshift/nginx.conf
+++ b/deployments/kustomize/overlays/openshift/nginx.conf
@@ -28,10 +28,10 @@
         }
         port_in_redirect off;
 
-        #NG Turned off Mar 21, 2024
-        #location /digital-trust/showcase/ {
-        #  proxy_pass https://bc-wallet-demo.apps.silver.devops.gov.bc.ca;
-        #}
+
+        location /digital-trust/showcase/ {
+          proxy_pass https://bc-wallet-demo.apps.silver.devops.gov.bc.ca;
+        }
 
         # location /digital-trust/ {
         #   rewrite ^/digital-trust/(.*)$ https://bcdigitaltrust.info/$1;
