Update build action to install OC tools since GH Actions Ubuntu 24 does not come with them pre-installed.

--- a/.github/workflows/oc-build-image.yaml
+++ b/.github/workflows/oc-build-image.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install oc
-        if: runner.os != 'Linux'
+        #if: runner.os != 'Linux' #ng. in ubuntu 24 action runner oc is not pre-installed, so instal it.
         uses: redhat-actions/openshift-tools-installer@v1
         with:
           oc: latest
