Update the nginx.confg file to match whats in use on production.

--- a/deployments/kustomize/overlays/openshift/nginx.conf
+++ b/deployments/kustomize/overlays/openshift/nginx.conf
@@ -26,7 +26,25 @@
             return 404;
             deny all;
         }
+
+        #Block wp xmlrpc. NG oct 22, 2025.
+        location = /xmlrpc.php {
+            return 404;
+            deny all;
+        }
         port_in_redirect off;
+
+
+        #NG. Oct 30, 2024. Pass the real client IP in from the balancer.
+        real_ip_header X-Forwarded-For;
+        real_ip_recursive on;
+        set_real_ip_from 0.0.0.0/0;
+
+        # Block access to the private folder media. NG Nov 19, 2024. As part of the new Digimod-Media-IDIR-Protect plugin.
+	location ~ /wp-content/uploads/private {
+	  deny all;
+	  return 404;
+	}
 
 
         location /digital-trust/showcase/ {
@@ -95,6 +113,21 @@
             deny all;
         }
         location ~ \.php$ {
+            #NG Oct 22,2025. Narrow down who can access wp-login to gov cidr.
+            location ~ \wp-login.php$ {
+                allow 142.32.0.0/16;
+                deny all;
+                
+                #need to re-copy all the things from the main php handler as only one location section is run by nginx.
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass 127.0.0.1:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param PATH_INFO $fastcgi_path_info;
+                fastcgi_param SERVER_NAME $server_name; 
+            }
+
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass 127.0.0.1:9000;
