--- a/deployments/kustomize/overlays/digital-latest/patch.yaml
+++ b/deployments/kustomize/overlays/digital-latest/patch.yaml
@@ -1,11 +1,11 @@
-# digital-dev/patch.yaml
+# digital-latest/patch.yaml
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: wordpress-nginx
   annotations:
      haproxy.router.openshift.io/ip_whitelist: >-
-      # Add all IP's to whitelist, to only allow certain IP ranges.
+      142.32.0.0/16 # Only allow BC Gov internal ips
 spec:
   host: digital-latest.apps.silver.devops.gov.bc.ca
   to:
