--- a/deployments/kustomize/overlays/openshift/nginx.conf
+++ b/deployments/kustomize/overlays/openshift/nginx.conf
@@ -116,6 +116,8 @@
             #NG Oct 22,2025. Narrow down who can access wp-login to gov cidr.
             location ~ \wp-login.php$ {
                 allow 142.32.0.0/16;
+                allow 142.29.0.0/16;
+                allow 10.0.0.0/16;
                 deny all;
                 
                 #need to re-copy all the things from the main php handler as only one location section is run by nginx.
